Java21プロファイルで元々の設定を上書きしていたので修正